unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_Mappings_Active_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Active Address Mapping Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Country_AAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Country AAM</label>
        <referenceTo>Country_Mapping__c</referenceTo>
        <relationshipLabel>Contacts (Mailing Country)</relationshipLabel>
        <relationshipName>Contacts_Mailing_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_ISO_Code__c</fullName>
        <formula>Mailing_Country_AAM__r.Iso_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Country_AAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Country AAM</label>
        <referenceTo>Country_Mapping__c</referenceTo>
        <relationshipLabel>Contacts (Other Country)</relationshipLabel>
        <relationshipName>Contacts_Other_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Country_ISO_Code__c</fullName>
        <formula>Other_Country_AAM__r.Iso_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Australia</fullName>
        <active>true</active>
        <label>Australia</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Admin</fullName>
        <active>true</active>
        <label>System Admin</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>